objects/ssot__ContactPointApp__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActiveFromDate__c</fullName>
        <label>Active From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveToDate__c</fullName>
        <label>Active To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationLoginId__c</fullName>
        <label>Application Login Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactEndTime__c</fullName>
        <label>Best Time To Contact End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactStartTime__c</fullName>
        <label>Best Time To Contact Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactTimezoneId__c</fullName>
        <label>Best Time to Contact Timezone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointTypeId__c</fullName>
        <label>Contact Point Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CookieIdText__c</fullName>
        <label>Cookie Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceEndPointId__c</fullName>
        <label>Device End Point</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceId__c</fullName>
        <label>Device</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForBusinessUse__c</fullName>
        <label>For Business Use</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForPersonalUse__c</fullName>
        <label>For Personal Use</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Contact Point App Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUndeliverable__c</fullName>
        <label>Is Undeliverable</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryFlag__c</fullName>
        <label>Primary Flag</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileFirstCreatedDate__c</fullName>
        <label>Profile First Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileLastUpdatedDate__c</fullName>
        <label>Profile Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileOccurrenceCount__c</fullName>
        <label>Profile Occurrence Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SoftwareApplicationId__c</fullName>
        <label>Software Application</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimezoneCode__c</fullName>
        <label>Timezone Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761159645_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactPointApp_DeviceId_map_Device__rel</label>
        <referenceTo>ssot__Device__dlm</referenceTo>
        <relationshipLabel>ContactPointApp_DeviceId_map_Device__rel</relationshipLabel>
        <relationshipName>rel_1697761159645_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761160558_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactPointApp_PartyId_map_Individu_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ContactPointApp_PartyId_map_Individu_rel</relationshipLabel>
        <relationshipName>rel_1697761160558_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761160625_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactPointApp_SoftwareApplicationI_rel</label>
        <referenceTo>ssot__SoftwareApplication__dlm</referenceTo>
        <relationshipLabel>ContactPointApp_SoftwareApplicationI_rel</relationshipLabel>
        <relationshipName>rel_1697761160625_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ssot_Id_map_ssot_Id_16299040167734__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ssot_Id_map_ssot_Id_16299040167734</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ssot_Id_map_ssot_Id_16299040167734</relationshipLabel>
        <relationshipName>ssot_Id_map_ssot_Id_16299040167734</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>